--- a/SA2CharSel/SA2CharSel.vcxproj
+++ b/SA2CharSel/SA2CharSel.vcxproj
@@ -83,10 +83,12 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BossTitles.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BossTitles.cpp" />
     <ClCompile Include="SA2CharSel.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
